<resources>
    <string name="app_name">Sarapp</string>

    <string name="invoices_list">Invoices</string>
    <string name="expense_summary">Expense Summary</string>
    <string name="add_invoice">Add Invoice</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>

    <string name="help_not_a_member">Don\'t have an account? Register here.</string>
    <string name="help_already_a_member">Already have an account? Login here.</string>

    <string name="menu_use_valid_credentials">Use valid credentials</string>
    <string name="menu_use_invalid_credentials">Use invalid credentials</string>

    <string name="drawer_item_invoices">Invoices</string>
    <string name="drawer_item_expense_summary">Expense Summary</string>
    <string name="drawer_item_logout">Logout</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string-array name="expense_types">
        <item>NONE</item>
        <item>FEEDING</item>
        <item>HEALTH</item>
        <item>CLOTHING</item>
        <item>DWELLING</item>
        <item>EDUCATION</item>
        <item>OTHER</item>
    </string-array>

    <string-array name="expense_types_descriptions">
        <item>-- None --</item>
        <item>Feeding</item>
        <item>Health</item>
        <item>Clothing</item>
        <item>Dwelling</item>
        <item>Education</item>
        <item>Other</item>
    </string-array>

    <string name="expense_type_changed_successfully">Expense type changed!</string>
    <string name="expense_type_change_error">An error occurred when changing the expense type. Please try again.</string>

    <string name="not_assigned">Not Assigned</string>
    <string name="feeding">Feeding</string>
    <string name="health">Health</string>
    <string name="clothing">Clothing</string>
    <string name="dwelling">Dwelling</string>
    <string name="education">Education</string>
    <string name="other">Other</string>

    <string name="grand_total">Grand Total</string>

    <string name="select_invoice_file">Select Invoice File</string>
    <string name="attach_invoice_instructions">
        Choose an Invoice from your device that was previously delivered by your Supplier after the time of purchase.
        Commonly, you will find this Invoice file in your email with and XML extension.
    </string>

    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="invoices_list_no_data">No invoices found. You can add invoices to your account by pressing the "+" button.</string>
    <string name="error_getting_summary_try_again">Error retrieving summary.\nPlease try again.</string>

    <string name="no_invoices_found">No invoices found</string>

    <string name="invalid_file">Invalid file</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
